Add scrolling feature after submitting message to chat

--- a/app/assets/stylesheets/group.css
+++ b/app/assets/stylesheets/group.css
@@ -65,8 +65,9 @@
     width: 33%; 
 }
 
-.messages-container{
+#messages-container{
     background-color: white; 
     height: 600px; 
     padding: 10px; 
+    overflow:scroll; 
 }
