--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -1,3 +1,16 @@
 .hidden{
     display:none;
 }
+
+.moments {
+    width: 100%;
+    margin: 0;
+    padding: 10px;
+    height: 100vh;
+}
+
+.profile-moments{
+    width: 50%; 
+    margin: 10px 30px; 
+    padding: 10px; 
+}
