change peer dependencies

--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -14,3 +14,12 @@
     margin: 10px 30px; 
     padding: 10px; 
 }
+
+.post-form{
+    display:flex; 
+    flex-direction: column; 
+}
+
+.form-input{
+    width: 100%;
+}
