--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -12,9 +12,21 @@
 
 .login-header{
     display: flex; 
-    justify-content: flex-end; 
+    justify-content: center; 
     padding: 20px; 
-    display: block;
+    margin-bottom: 20px; 
+    width: 100%; 
+    background-color: #2185d0;
+    color: white; 
+}
+
+.login-header a {
+    color: white; 
+}
+.signup-header{
+    display: flex; 
+    justify-content: flex-start; 
+    padding: 20px; 
     margin-bottom: 20px; 
     width: 100%; 
     background-color: #2185d0;
@@ -22,10 +34,9 @@
 
 .signup-container{
     border: 1px solid lightgray; 
-    border-radius: 3px; 
     box-shadow: 2px 2px 2px 2px lightgrey; 
     background-color: #ffffffd6;
-    width: 400px; 
+    width: 600px; 
     height: 600px; 
     display: flex; 
     flex-direction: column; 
@@ -34,6 +45,29 @@
     transform: translateY(10%);
 } 
 
+.login-container{
+    display: flex; 
+    flex-direction: column;
+    justify-content: center; 
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    box-shadow: 2px 2px 2px 2px lightgrey;
+    background-color: #ffffffd6;
+    width: 600px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    transform: translateY(10%);
+}
+
+
+.login-form{
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+}
 
 .input-list{
     list-style: none;
@@ -44,9 +78,13 @@
 }
 
 .input{
-    margin: 4px; 
-    border-radius: 4px; 
-    border: 1px solid lightgray; 
+    margin: 2px; 
+    padding: 7px;
+}
+
+#button{
+    margin: 10px; 
+    padding: 7px;
 }
 
 .signup-button{
