--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -16,7 +16,7 @@
     padding: 20px; 
     margin-bottom: 20px; 
     width: 100%; 
-    background-color: #2185d0;
+    background-color: linear-gradient( #2185d0, white);
     color: white; 
 }
 
@@ -29,7 +29,7 @@
     padding: 20px; 
     margin-bottom: 20px; 
     width: 100%; 
-    background-color: #2185d0;
+    background: linear-gradient( #105d97, #57a0d8);
 }
 
 .signup-container{
@@ -82,6 +82,10 @@
 #button{
     margin: 10px; 
     padding: 7px;
+}
+
+ .button{
+    color: green;
 }
 
 .signup-button{
