--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -2,12 +2,18 @@
     display:none;
 }
 
+.moments-index-container{
+     margin-left: 100px;
+     margin-right: 100px;
+     padding: 10px;
+     width: 67%;
+}
+
 .moments {
-    width: 100%;
-    margin: 0;
-    padding: 10px;
     height: 100vh;
 }
+
+
 
 .profile-moments{
     width: 50%; 
@@ -15,9 +21,45 @@
     padding: 10px; 
 }
 
+.moment-modal {
+    position: absolute; 
+    top: 250px; 
+    left: 120px; 
+    width: 50%; 
+    padding: 10px;
+    
+    
+}
+
+.filestack-buttons{
+    width: 20%;
+    border-radius: .28571429rem;
+    background-color: #2185d0;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+    font-size: 1rem;
+    border: none;
+    box-shadow: 0 0 0 0 rgba(34, 36, 38, .15);
+    font-weight: 700;
+    margin: 0 .25em 0 0;
+    padding: .8em 1.5em .8em;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    font-family: Oswald,
+    'Helvetica Neue',
+    Arial,
+    Helvetica,
+    sans-serif;
+}
+
+
 .post-form{
     display:flex; 
     flex-direction: column; 
+    margin-bottom: 50px;
+    padding: 10px;
 }
 
 .form-input{
