gradient for nav bar

--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -16,7 +16,7 @@
     padding: 20px; 
     margin-bottom: 20px; 
     width: 100%; 
-    background-color: linear-gradient( #2185d0, white);
+    background: linear-gradient( #105d97, #57a0d8);
     color: white; 
 }
 
