--- a/app/assets/stylesheets/group.css
+++ b/app/assets/stylesheets/group.css
@@ -110,3 +110,11 @@
     margin: 0px 20px; 
     padding: 30px;
 }
+
+.group-modal {
+    position: absolute;
+    top: 250px;
+    left: 120px;
+    width: 50%;
+    padding: 10px;
+}
