--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,10 @@
         window.currentUser = {
           "id": <%= current_user.id %>, 
           "username": "<%= current_user.username %>", 
-          "email": "<%= current_user.email %>"
+          "email": "<%= current_user.email %>",
+          "first_name": "<%= current_user.first_name %>",
+          "last_name": "<%= current_user.last_name %>",
+          "img_url": "<%= current_user.img_url %>",
         };
       </script>
     <% end %>
