--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -23,8 +23,8 @@
 
 .moment-modal {
     position: absolute; 
-    top: 250px; 
-    left: 120px; 
+    top: 50%; 
+    left: 25%; 
     width: 50%; 
     padding: 10px;
     
@@ -32,7 +32,7 @@
 }
 
 .filestack-buttons{
-    width: 20%;
+    width: 30%;
     border-radius: .28571429rem;
     background-color: #2185d0;
     color: #fff;
@@ -43,7 +43,7 @@
     box-shadow: 0 0 0 0 rgba(34, 36, 38, .15);
     font-weight: 700;
     margin: 0 .25em 0 0;
-    padding: .8em 1.5em .8em;
+    padding: .8em .8em .8em;
     line-height: 1em;
     font-style: normal;
     text-align: center;
