--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -42,7 +42,7 @@
     border: none;
     box-shadow: 0 0 0 0 rgba(34, 36, 38, .15);
     font-weight: 700;
-    margin: 0 .25em 0 0;
+    margin: .50em .25em 0 0;
     padding: .8em .8em .8em;
     line-height: 1em;
     font-style: normal;
