--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -5,11 +5,13 @@
     position:relative;
 }
 
+.prpfile-left-container{
+    display: flex; 
+
+}
 .profile-image-container{
-    width: 50%; 
-    margin: 50px; 
+    margin: 50px 50px 7px 50px;
     display: flex;
-    flex-direction: column; 
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 2px;
@@ -17,6 +19,29 @@
 }
 
 .profile-image {
-    border: 1px solid lightgray;
+    border: 2px solid lightgray;
     border-radius: 2px;
+}
+
+.update-button {
+    width: 30%;
+    border-radius: .28571429rem;
+    background-color: #2185d0;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+    font-size: 1rem;
+    border: none;
+    box-shadow: 0 0 0 0 rgba(34, 36, 38, .15);
+    font-weight: 700;
+    margin: .50em .25em 0 50px;
+    padding: .8em .8em .8em;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    font-family: Oswald,
+    'Helvetica Neue',
+    Arial,
+    Helvetica,
+    sans-serif;
 }
