--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -6,6 +6,13 @@
     width: 40%;
 }
 
+.chat-sidebar {
+    display: flex; 
+    border: 1px solid lightgray; 
+    margin: 0; 
+    background-color: white; 
+}
+
 #messages-container {
     background-color: white;
     display: flex;
