--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -8,6 +8,8 @@
      margin-left: 100px;
      margin-right: 100px;
      padding: 10px;
+     height: 700px;
+     overflow: hidden;
 }
 
 .moments-index-top{
@@ -18,6 +20,35 @@
 .moments {
     height: 100vh;
 }
+
+.moments-index-chats-container{
+    display: flex; 
+    position: absolute; 
+    height: 200px; 
+    bottom: 0px; 
+    z-index: 4; 
+}
+
+.chatbox-container {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin: 0 10px 0 10px;
+    border: 1px solid lightgray; 
+    flex-basis: 300px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    box-shadow: 50px 50px rgba(172, 33, 33, 0), 
+
+}
+
+.chatbox-header {
+    border-bottom: 1px solid lightgray;
+    padding: 4px 10px 4px 10px; 
+    background-color: #2185d0;
+}
+
 
 
 
