--- a/app/assets/stylesheets/api/moments.scss
+++ b/app/assets/stylesheets/api/moments.scss
@@ -7,7 +7,7 @@
     flex-direction:column;
      margin-left: 100px;
      margin-right: 100px;
-     padding: 10px;
+    //  padding: 10px;
      height: 700px;
      overflow: hidden;
 }
@@ -19,6 +19,7 @@
 
 .moments {
     height: 100vh;
+    width: 70%; 
 }
 
 .moments-index-chats-container{
@@ -27,6 +28,14 @@
     height: 300px; 
     bottom: 0px; 
     z-index: 2; 
+}
+
+.chat-sidebar { 
+    position: absolute; 
+    right: 0px; 
+    height: auto; 
+    width: 250px; 
+    overflow-y: scroll; 
 }
 
 .chatbox-container {
@@ -98,7 +107,7 @@
     display:flex; 
     flex-direction: column; 
     margin-bottom: 50px;
-    padding: 10px;
+    padding: 20px 10px 20px 10px;
 }
 
 .form-input{
