--- a/app/assets/stylesheets/group.css
+++ b/app/assets/stylesheets/group.css
@@ -6,7 +6,6 @@
 
 .groupshow-container {
     display: flex;
-    justify-content: flex-start;
 }
 
 
@@ -14,8 +13,7 @@
 .right-groupshow {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-left: 20px;
+    width: 100%;
 }
 
 .groupshow-header {
@@ -24,6 +22,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
+    max-height: 100px;
 }
 
 
@@ -31,27 +30,22 @@
     display: flex;
     align-items: center;
     width: 100%;
+    padding: 5px;
 }
 
 .group-index-item {
     cursor: pointer;
-    margin-bottom: 10px;
-    margin-left: 5px; 
+    margin-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .group-index-item:hover {
-    background-color: rgb(249, 251, 252)
+    background-color: rgb(239, 242, 243)
 }
 
 
-.group-index-item-1 {
-    width: 33%;
-}
 
-
-.group-index-item-2 {
-    width: 33%;
-}
 
 .item-messages {
     color: lightgray;
