--- a/app/assets/stylesheets/chatbox.css
+++ b/app/assets/stylesheets/chatbox.css
@@ -17,6 +17,7 @@
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .20);
     border-radius: 1px;
     padding: 4px 10px 15px 10px;
+    min-height: 30px;
     background-color: #2185d0;
     cursor: pointer;
     display: flex;
