chatbox.jsx change state.currentMessages to object

--- a/app/assets/stylesheets/group.css
+++ b/app/assets/stylesheets/group.css
@@ -25,6 +25,11 @@
     max-height: 100px;
 }
 
+.groupshow-nav-bar {
+    align-self: flex-end;
+    justify-content: flex-end;
+    
+}
 
 .group-index-item-container {
     display: flex;
