group_show_header.jsx take groupshow header and make new component

--- a/app/assets/stylesheets/group.css
+++ b/app/assets/stylesheets/group.css
@@ -31,6 +31,10 @@
     
 }
 
+.groupshow-title {
+    margin-top: 10px;
+}
+
 .group-index-item-container {
     display: flex;
     align-items: center;
