--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -1,3 +1,8 @@
+.feed-content{
+    display:flex; 
+    flex-direction: column; 
+}
+
 .feed-meta {
     display: flex;
     border-top: 1px solid lightgray;
