--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100%
+    height: 810px;
 }
 
 .login-header{
@@ -25,26 +25,37 @@
 }
 .signup-header{
     display: flex; 
-    justify-content: flex-start; 
+    justify-content: space-around; 
     padding: 20px; 
     margin-bottom: 20px; 
     width: 100%; 
     background: linear-gradient( #105d97, #57a0d8);
+    color: white; 
 }
 
 .signup-container{
-    border: 1px solid lightgray; 
-    box-shadow: 2px 2px 2px 2px lightgrey; 
-    background-color: #ffffffd6;
-    width: 600px; 
+    width: 650px; 
     height: 600px; 
     display: flex; 
     flex-direction: column; 
     align-items: center;
-    padding: 20px; 
-    transform: translateY(10%);
+    /* padding: 20px;  */
+    /* transform: translateY(10%); */
+    position: relative; 
+    left: 230px; 
 } 
 
+.signup-form {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    width: 90%; 
+}
+
+.signup-component{
+    margin-bottom: 2px; 
+    
+}
 .login-container{
     display: flex; 
     flex-direction: column;
@@ -76,7 +87,6 @@
     width: 50%; 
 }
 .input{
-    margin: 2px; 
     padding: 7px;
 }
 
@@ -96,4 +106,11 @@
 .errors{
     color: red; 
     align-self: center; 
+}
+
+.footer {
+    display: block;
+    background-color: white; 
+    padding: 50px;
+    width: 100%; 
 }
