--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>Ohana</title>
 
-    
     <script src="https://static.filestackapi.com/v3/filestack.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
@@ -12,6 +11,7 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
       <script src="semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <%= javascript_include_tag 'application' %>
 
