--- a/app/assets/stylesheets/group_show.css
+++ b/app/assets/stylesheets/group_show.css
@@ -56,3 +56,28 @@
     margin-top: 50px; 
     margin-bottom: 50px;
 }
+
+.groupshow-messages-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.groupshow-profile {
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 1px;
+    box-shadow: 1px 1px 1px 1px lightblue;
+}
+
+.upload-button {
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.group-modal {
+    position: absolute;
+    top: 250px;
+    left: 120px;
+    width: 50%;
+    padding: 10px;
+}
