--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -8,6 +8,7 @@
     justify-content: space-around;
     align-items: center;
     height: 810px;
+    background-color: white; 
 }
 
 .login-container {
@@ -59,20 +60,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 20px;  */
-    /* transform: translateY(10%); */
-    position: relative;
-    left: 230px;
 }
 
+.signup-header-container{
+    display: flex;
+    width: 100%;
+    background: linear-gradient( #105d97, #57a0d8);
+}
 .signup-header{
     display: flex; 
-    justify-content: space-around; 
-    padding: 18px; 
-    margin-bottom: 20px; 
+    justify-content: space-between; 
+    padding: 15px; 
     width: 100%; 
-    background: linear-gradient( #105d97, #57a0d8);
     color: white; 
+    margin-left: 30px; 
+    margin-right: 30px; 
 }
 
 .signup-form {
@@ -80,6 +82,10 @@
     flex-direction: column; 
     justify-content: center; 
     width: 90%; 
+}
+
+.signup-field {
+    display: flex; 
 }
 
 .signup-component{
