--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -5,21 +5,19 @@
 .session_form-container{
     display: flex; 
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     height: 810px;
     background-color: white; 
 }
 
 .login-container {
-    position: relative; 
-    bottom: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border: 1px solid lightgray;
     border-radius: 3px;
-    margin-top: 20px;
+    margin-top: 100px;
     box-shadow: 2px 2px 2px 2px lightgrey;
     background-color: #ffffffd6;
     width: 600px;
@@ -60,6 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 70px;
 }
 
 .signup-header-container{
@@ -73,8 +72,8 @@
     padding: 15px; 
     width: 100%; 
     color: white; 
-    margin-left: 30px; 
-    margin-right: 30px; 
+    margin-left: 50px; 
+    margin-right: 50px; 
 }
 
 .signup-form {
